--- a/CanvasDemo macOS/Base.lproj/Main.storyboard
+++ b/CanvasDemo macOS/Base.lproj/Main.storyboard
@@ -713,13 +713,13 @@
                                 <rect key="frame" x="0.0" y="0.0" width="480" height="372"/>
                                 <subviews>
                                     <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="30" horizontalPageScroll="10" verticalLineScroll="30" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dbr-nl-6dC">
-                                        <rect key="frame" x="0.0" y="112" width="100" height="260"/>
+                                        <rect key="frame" x="0.0" y="117" width="100" height="255"/>
                                         <clipView key="contentView" id="QQu-6r-ab1">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="260"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="255"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="none" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="29" viewBased="YES" id="LUD-7e-Ozj">
-                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="260"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="255"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <size key="intercellSpacing" width="3" height="1"/>
                                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -786,7 +786,7 @@
                                         <rect key="frame" x="101" y="0.0" width="379" height="372"/>
                                         <subviews>
                                             <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="4" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UDw-EE-9ei">
-                                                <rect key="frame" x="0.0" y="343" width="278" height="29"/>
+                                                <rect key="frame" x="0.0" y="343" width="351" height="29"/>
                                                 <subviews>
                                                     <button translatesAutoresizingMaskIntoConstraints="NO" id="kQX-EK-pxv">
                                                         <rect key="frame" x="4" y="4" width="21" height="21"/>
@@ -865,15 +865,25 @@ CA
                                                             <action selector="colorChanged:" target="XfG-lQ-9wD" id="ba5-G2-aAN"/>
                                                         </connections>
                                                     </colorWell>
+                                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="PEO-wa-lY2">
+                                                        <rect key="frame" x="148" y="6" width="73" height="18"/>
+                                                        <buttonCell key="cell" type="check" title="Rotation" bezelStyle="regularSquare" imagePosition="left" inset="2" id="2xd-Po-e6G">
+                                                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                                            <font key="font" metaFont="system"/>
+                                                        </buttonCell>
+                                                        <connections>
+                                                            <action selector="rotationSwitchValueChanged:" target="XfG-lQ-9wD" id="UWy-aX-4DI"/>
+                                                        </connections>
+                                                    </button>
                                                     <slider horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Qql-RB-waT">
-                                                        <rect key="frame" x="148" y="0.0" width="28" height="30"/>
+                                                        <rect key="frame" x="221" y="0.0" width="28" height="30"/>
                                                         <sliderCell key="cell" continuous="YES" alignment="left" maxValue="360" allowsTickMarkValuesOnly="YES" sliderType="circular" id="YOJ-Tl-z2s"/>
                                                         <connections>
                                                             <action selector="rotationAngleChanged:" target="XfG-lQ-9wD" id="Keb-u0-OUM"/>
                                                         </connections>
                                                     </slider>
                                                     <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oua-ZP-PXY">
-                                                        <rect key="frame" x="178" y="4" width="96" height="21"/>
+                                                        <rect key="frame" x="251" y="4" width="96" height="21"/>
                                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="ymL-hh-KhW">
                                                             <font key="font" metaFont="system"/>
                                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -896,8 +906,10 @@ CA
                                                     <integer value="1000"/>
                                                     <integer value="1000"/>
                                                     <integer value="1000"/>
+                                                    <integer value="1000"/>
                                                 </visibilityPriorities>
                                                 <customSpacing>
+                                                    <real value="3.4028234663852886e+38"/>
                                                     <real value="3.4028234663852886e+38"/>
                                                     <real value="3.4028234663852886e+38"/>
                                                     <real value="3.4028234663852886e+38"/>
@@ -964,6 +976,7 @@ CA
                         <outlet property="deleteButton" destination="hAh-7h-bYE" id="AuG-pM-r4N"/>
                         <outlet property="redoButton" destination="w0p-0e-v3d" id="aOk-LA-l4O"/>
                         <outlet property="rotationSlider" destination="Qql-RB-waT" id="srr-4H-mVw"/>
+                        <outlet property="rotationSwitch" destination="PEO-wa-lY2" id="aqq-A0-P9o"/>
                         <outlet property="tableView" destination="LUD-7e-Ozj" id="b3Z-rG-hA3"/>
                         <outlet property="textField" destination="oua-ZP-PXY" id="75d-IE-efd"/>
                         <outlet property="undoButton" destination="ibe-4X-wdH" id="1O4-4U-Blb"/>
